--- a/compose.yml
+++ b/compose.yml
@@ -31,3 +31,12 @@ services:
       # 管理者アカウント初期設定
       ADMIN_EMAIL: "admin@example.com"
       ADMIN_PASSWORD: "password"
+
+  memos:
+    image: neosmemo/memos:stable
+    container_name: memos
+    volumes:
+      - ./memos_data:/var/opt/memos
+    ports:
+      - "5230:5230"
+    restart: always
