--- a/compose.yml
+++ b/compose.yml
@@ -7,3 +7,20 @@ services:
     ports:
       - "5230:5230"
     restart: always
+
+  api:
+    image: python:3.12-slim
+    container_name: api-server
+    working_dir: /app
+    volumes:
+      - .:/app
+    ports:
+      - "8080:8080"
+    environment:
+      - MEMOS_URL=http://memos:5230
+    env_file:
+      - .env
+    command: python server/app.py
+    depends_on:
+      - memos
+    restart: always
