--- a/compose.yml
+++ b/compose.yml
@@ -14,13 +14,16 @@ services:
     working_dir: /app
     volumes:
       - .:/app
+      - ./creds:/app/creds
     ports:
       - "8080:8080"
     environment:
       - MEMOS_URL=http://memos:5230
     env_file:
       - .env
-    command: sh -c "pip install -q requests && python server/app.py"
+    command: >
+      sh -c "pip install -q requests google-generativeai google-cloud-language &&
+             python -m server.app"
     depends_on:
       - memos
     restart: always
