--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ GEMINI_MODEL=2.5-flash  # 2.0-flash, 2.5-flash, 2.5-pro, 3.0-pro
 
 # Natural Language API (optional)
 ENABLE_NL_API=false
-GOOGLE_APPLICATION_CREDENTIALS=/app/creds/th-zenn-ai-hackathon-4ac7224d35fd.json
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/credentials.json
