--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "google-cloud-language>=2.18.0",
     "google-generativeai>=0.8.5",
     "requests>=2.32.5",
+    "google-cloud-firestore>=2.14.0",
 ]
